# Drishti

./: .gitignore  .mcp.json  EDGE_ROADMAP.md  INSTITUTIONAL_INTEL_ARCHITECTURE.md  INTELLIGENCE_ROADMAP.md  README.md  TODO.md  TradingBridge.xlsx  _build_features.py  _build_features_v2.py  _reverse_analysis.py  _rr_analysis.py  _train_flow_predictor.py  _train_flow_predictor_v2.py  _train_flow_predictor_v3.py  export_data.py  install-tasks.ps1  market_brain.py  market_engine.py  pyproject.toml  quant-bridge-stop.bat  quant-bridge.bat  requirements.lock.txt  requirements.txt  run_dashboard.py  run_post_q4_ingest.sh  run_premarket.py  start_scanner.bat  vision.docx
.claude/: settings.local.json
.codex/: instructions.md
data/: orb_backtest_log.txt  orb_backtest_summary.txt
data/models/: ml_signal_v1.pkl  (+5 more)
docs/: DRISHTI_REDESIGN.md  FAILED_RESEARCH_TRACK.md  MASTER_BUILD_PROMPT.md  MONDAY_READINESS_2026-04-19.md  NEXT_PRODUCT_BACKLOG.md  OPERATOR_RUNBOOK.md  PHASE_A_EXECUTION_COUPLING.md  POST_ACCEPTANCE_CLEANUP.md  PREDICTIVE_AI_SAFEGUARDS.md  PRODUCT_SPEC.md  Quant-Bridge-Review.md  RELEASE_NOTES.md  STRATEGY_BACKTEST_VERDICT.md  STRATEGY_REPLICATION_SPEC.md  f1_v3_retrain_2026-04-26.md  live_config_expectancy_2026-04-25.md  plan_yz_features_2026-04-28.md  screenConfig.json  splits.groovy  structural_features_eval_2026-04-28.md
mcp_server/: __init__.py  __main__.py  codex_review.py  server.py
research/: build_features_v2.py  calibrate_v3_5d.py  catalyst_ab_report.py  eval_v3_purged.py  insider_strategy_backtest.py  insider_strategy_sensitivities.py  pond_trigger_backtest.py  rr_analysis.py  train_v3_structural.py
scripts/: build_v72_swing_benchmark_replica.py
signal_scanner/: PIPELINE.md  __init__.py  __main__.py  config.py  daily_evidence_report.py  daily_health_check.py  main.py  session_monitor.py  validate_trading_paths.py
tests/: test_trading_pipeline.py
(+209 files in other folders)
